# kiwi-flutter

./: .gitignore  kiwi-flutter.combined
dart/: .flutter-plugins-dependencies  .gitignore  CLAUDE.md  README.md  build.sh  figma_wasm_interface.txt  local.sh  pubspec.yaml
dart/.claude/: settings.local.json
dart/docs/: TEXT_RENDERING_ISSUE.md
dart/example/: README.md  figma_viewer.dart  main.dart  pubspec.yaml  run_web.sh
dart/integration_test/: screenshot_test.dart
dart/lib/: flutter_renderer.dart  kiwi.dart  main.dart
dart/linux/: CMakeLists.txt
dart/rust_figma_renderer/: Cargo.toml  README.md  build.sh  flutter_integration.dart  flutter_rust_bridge.yaml
dart/rust_figma_renderer/docs/: API_REFERENCE.md  ARCHITECTURE.md  FIGMA_WASM_INTERFACE.md  FIGMA_WASM_SIGNATURES.md  INDEX.md  INTEGRATION_GUIDE.md  KIWI_FORMAT.md
dart/rust_figma_renderer/src/: api.rs  effects.rs  kiwi.rs  layout.rs  lib.rs  nodes.rs  paints.rs  render.rs  schema.rs  spatial.rs  tiles.rs  vector.rs
dart/rust_figma_renderer/tools/: README.md  analyze_capture.py  capture_node_data.js  cdp_capture.js  cdp_capture_result.json  explore_figma.js  figma_exploration.json  figma_node_capture.json  figma_wasm_interceptor.js  package.json
dart/scripts/: download_figma_images.dart  extract_har_images.dart  extract_image_batch.dart  extract_s3_images.dart  fetch_figma_images.dart  render_to_png.dart
dart/test/: advanced_prototyping_test.dart  asset_ref_test.dart  assets_panel_test.dart  assets_test.dart  auto_layout_test.dart  canvas_menu_integration_test.dart  context_menu_test.dart  (+27 more)
(+136 files in other folders)
