[package]
name = "figma_renderer"
version = "0.1.0"
edition = "2021"
description = "High-performance Figma file parser and renderer for Flutter"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# Kiwi binary format
brine-kiwi-schema = "0.1"

# Compression - use native zstd for non-WASM, pure Rust for WASM
flate2 = "1.0"

# Geometry and paths
lyon = "1.0"
euclid = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Spatial indexing for tile-based rendering
rstar = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Flutter bridge
flutter_rust_bridge = "=2.11.1"

# Logging
log = "0.4"

# Native zstd (for non-WASM platforms)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = "0.13"

# WASM support (conditional)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
ruzstd = "0.8"  # Pure Rust zstd implementation for WASM
serde-wasm-bindgen = "0.6"

[build-dependencies]
flutter_rust_bridge_codegen = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
default = []
wasm = []
